Fixed padding for search input.
Padding was too high for the height, causing display issues in e.g. Firefox

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -46,7 +46,7 @@ input {
 }
 
 input.search {
-    padding: 22px;
+    padding: 0 22px;
     background: #eee;
     -webkit-border-radius: 100px;
             border-radius: 100px;
